# OptiFolio

./: FinalProject.opam  INSTALL.md  README.md  RepoURL.txt  bisect266939572.coverage  bisect329316271.coverage  bisect579472229.coverage  dune-project  gallery.yaml
_coverage/: index.html
_coverage/lib/: analytics.ml.html  optimizer.ml.html  refresh.ml.html  stock_cache.ml.html
_coverage/test/: test_refresh.ml.html
data/: stock_cache.json
lib/: analytics.ml  analytics.mli  dune  optimizer.ml  optimizer.mli  questionnaire_types.ml  questionnaire_types.mli  refresh.ml  refresh.mli  risk_profile.ml  risk_profile.mli  stock_cache.ml  stock_cache.mli
test/: dune  test_optimizer.ml  test_refresh.ml  test_stock.ml
