(test
 (name test_stock)
 (libraries ounit2 FinalProject bisect_ppx.runtime bisect_ppx.common))

(test
 (name test_refresh)
 (instrumentation (backend bisect_ppx))
 (libraries ounit2 FinalProject api lwt.unix bisect_ppx.runtime bisect_ppx.common))

(test
 (name test_optimizer)
 (libraries ounit2 FinalProject bisect_ppx.runtime bisect_ppx.common))
